LWP working, fix dependencies, add debugging config for VSCode, gitignore

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ uvicorn[standard]
 fastapi
 transformers
 tomesd
-#xformers
+# xformers
 redis
 celery
 flower
 invisible-watermark
+omegaconf
+safetensors
