--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 
 torch>=1.12.0
 diffusers>=0.19.3
-xformers>=0.0.20
+# xformers>=0.0.20
 triton>=2.1.0
 ninja
 uvicorn[standard]
@@ -15,3 +15,4 @@ invisible-watermark
 compel
 omegaconf
 pydantic
+safetensors
